--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 	<link rel="stylesheet" href="quiz.css">
 </head>
 <body>
-	
-	
-
-
+	<h1>Crazy Larry's Shady Car Superstore</h1>
+	<nav class="navbar navbar-default">
+		<input type="text" class="textBox" name="textInput">
+	</nav>
+	<div class="container-fluid"></div>
+	<div class="col-md-3"></div>
+	<div class="col-md-6"></div>
+	<div class="col-md-3"></div>
 <script type="text/javascript" src="quiz.js"></script>
 </body>
 </html>
