--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 	<nav class="navbar navbar-default">
 		<input type="text" class="textBox" name="textInput">
 	</nav>
-	<div class="container-fluid"></div>
-	<div class="col-md-3"></div>
-	<div class="col-md-6"></div>
-	<div class="col-md-3"></div>
+	<div class="container"></div>
+		<div class="row" id="carCards">
+			<div class="col-md-3"></div>
+			<div class="col-md-3"></div>
+			<div class="col-md-3"></div>
+		</div>
 <script type="text/javascript" src="quiz.js"></script>
 </body>
 </html>
