--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 	<link rel="stylesheet" href="quiz.css">
 </head>
 <body>
-	<h1>Crazy Larry's Shady Car Superstore</h1>
+	<h1>Crazy Larry's Shady Cars</h1>
 	<nav class="navbar navbar-default">
-		<input type="text" class="textBox" name="textInput">
+		<input type="text" id="textBox" name="textInput" placeholder="Search...">
 	</nav>
-	<div class="container"></div>
-		<div class="row" id="carCards">
-			<div class="col-md-3"></div>
-			<div class="col-md-3"></div>
-			<div class="col-md-3"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-3"></div>
+				<article id="carCards"></article>
 		</div>
+	</div>
 <script type="text/javascript" src="quiz.js"></script>
 </body>
 </html>
