--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 	</nav>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-3"></div>
-				<article id="carCards"></article>
+			<div class="col-lg-4"></div>
+			<div class="col-lg-4"></div>
+			<div class="col-lg-4"></div>
+				<div id="carCards"></div>
 		</div>
 	</div>
 <script type="text/javascript" src="quiz.js"></script>
