--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 	</nav>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-4"></div>
-			<div class="col-lg-4"></div>
-			<div class="col-lg-4"></div>
-				<div id="carCards"></div>
+			<div class="col-lg-4 col-lg-4 col-lg-4"></div>
+			<div id="carCards">
 		</div>
 	</div>
 <script type="text/javascript" src="quiz.js"></script>
