--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 <body>
 	<h1>Crazy Larry's Shady Cars</h1>
 	<nav class="navbar navbar-default">
-		<input type="text" id="textBox" name="textInput" placeholder="Search...">
+		<div class="input-group col-md-6 col-md-offset-3">
+			<input type="text" class="search-query form-control" id="textBox" placeholder="Search..."/>
+			<span class="input-group-btn">
+				<button class="btn btn-danger" type="button">
+					<span class="glyphicon glyphicon-search"></span>
+				</button>
+			</span>
+		</div>	
 	</nav>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-4 col-lg-4 col-lg-4"></div>
-			<div id="carCards">
+				<div id="carCards"></div>
 		</div>
 	</div>
 <script type="text/javascript" src="quiz.js"></script>
