--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
 	<h1>Crazy Larry's Shady Cars</h1>
 	<nav class="navbar navbar-default">
 		<div class="input-group col-md-6 col-md-offset-3">
-			<input type="text" class="search-query form-control" id="textBox" placeholder="Search..."/>
-			<span class="input-group-btn">
-				<button class="btn btn-danger" type="button">
-					<span class="glyphicon glyphicon-search"></span>
-				</button>
-			</span>
-		</div>	
+			<input type="text" class="search-query form-control" value="" id="textBox" placeholder="Description..."/>
+		</div>
 	</nav>
-	<div class="container">
-		<div class="row">
-				<div id="carCards"></div>
+	<div class="container-fluid">
+		<div class="row" id="carCards">
+
 		</div>
 	</div>
 <script type="text/javascript" src="quiz.js"></script>
